# gmusic-player-qt

./: CMakeLists.txt
src/: CMakeLists.txt  controlpanelwidget.cpp  controlpanelwidget.h  controlpanelwidget.ui  database.cpp  database.h  gmapi.cpp  gmapi.h  imagestorage.cpp  imagestorage.h  librarymodel.cpp  librarymodel.h  librarytableview.cpp  librarytableview.h  librarywidget.cpp  librarywidget.h  librarywidget.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  player.cpp  player.h  playertoolbar.cpp  playertoolbar.h  playertoolbar.ui  proxyresult.cpp  proxyresult.h  refreshauthwidget.cpp  refreshauthwidget.h  refreshauthwidget.ui  settingsmodel.cpp  settingsmodel.h  settingsstore.cpp  settingsstore.h  (+9 more)
